apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:3.0.7 # {"$imagepolicy": "flux-system:sonarr"}
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /downloads
              name: downloads-volume
            - mountPath: /tv
              name: media-volume
              subPath: tvshows
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads-volume
          hostPath:
            path: /mnt/downloads
        - name: media-volume
          nfs:
            server: nas01.home.arpa.
            path: /mnt/zp01/media
