apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  ports:
    - name: http
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
